--- a/Navigation Tabs Menu/index.html
+++ b/Navigation Tabs Menu/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <ul class="navigation">
-        <li>
+        <li class="active">
             <a href="#">
                 <span class="icon"><ion-icon name="home-outline"></ion-icon></span>
                 <span class="text">Home</span>
@@ -46,5 +46,15 @@
     
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script>
+        let list = document.querySelectorAll('.navigation li');
+        function activeLink(){
+            list.forEach((item) => 
+            item.classList.remove('active'));
+            this.classList.add('active');
+        }
+        list.forEach((item)=>
+        item.addEventListener('click', activeLink))
+    </script>
 </body>
 </html>
